Scrollbar Fix

--- a/public/inline.css
+++ b/public/inline.css
@@ -56,7 +56,7 @@
 .disengage {position: absolute;left: 10vw;top: 5vh;}
 .lootDropWindow {position: absolute;font-family: 'Cinzel-Regular';background-color: #000;height: 40%;width: 45%;top: 45%;left: 50%;transform: translateX(-50%);padding: 0.5em;border: 0.15em solid gold;border-radius: 0.25em;box-shadow: 0 0 0.5em rgba(255, 215, 0, 1);overflow-y: scroll;z-index: 2}
 .playerMenuHeading {font-family: 'Cinzel-Regular';font-size: 1em; text-align: center;color: #fdf6d8;background-color: black;padding: 0;} 
-.playerWindow {position: absolute;top: 10vh;color: #fdf6d8;text-align: center;height: 80vh;width: 32vw;border: 0.15em solid gold;background-color: #000;overflow: scroll;}
+.playerWindow {position: absolute;top: 10vh;color: #fdf6d8;text-align: center;height: 80vh;width: 32vw;border: 0.15em solid gold;background-color: #000;overflow: scroll; scrollbar-width: none;}
 .playerSaveInventoryOuter {position: fixed;background-color: #000;top: -0.5vh;right: 0.5vw;border-radius: 5%;}
 .stamina { text-align: center;color: #fdf6d8;font-family: 'Cinzel Regular';font-size: 1em;z-index: 3; }
 .staminaBubble {position: absolute;top: 2vh;left: 25vw; width: 5vw; max-height: 10vh; border-radius: 50%; overflow: hidden;align-items: center;justify-content: center;border: 0.2em solid purple;box-shadow: 0 0 0.5em rgba(183, 0, 255, 0.5);}
